--- a/src/app/device-location/device-location.component.html
+++ b/src/app/device-location/device-location.component.html
@@ -3,12 +3,12 @@
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
 <agm-map [zoom]="zoomVal" [latitude]="lat" [longitude]="lng">
-  <ng-container>
-  <agm-polyline *ngFor="let point of latlonValues;">
-    <agm-polyline-point [latitude]="point.latVal" [longitude]="point.longVal">
+  
+  <agm-polyline>
+    <agm-polyline-point *ngFor="let point of polyline; let i = index" [latitude]="point.latVal" [longitude]="point.longVal">
     </agm-polyline-point>
   </agm-polyline>
- </ng-container>
+ 
   <agm-marker [latitude]="28.571938" [longitude]="77.393503" [title]="iconTitle"> 
   </agm-marker>
 </agm-map>
