added marker at last known location

--- a/src/app/device-location/device-location.component.html
+++ b/src/app/device-location/device-location.component.html
@@ -9,6 +9,6 @@
     </agm-polyline-point>
   </agm-polyline>
  
-  <agm-marker [latitude]="28.571938" [longitude]="77.393503" [title]="iconTitle"> 
+  <agm-marker [latitude]="lastMarker.latVal" [longitude]="lastMarker.longVal" [title]="iconTitle" [iconUrl]="iconDevice">
   </agm-marker>
 </agm-map>
